# synapse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_ingest.py  02_query.py  03_agent.py  04_collection_management.py
scripts/: smoke_test.py
synapse/: __init__.py  chunker.py  extractors.py  pipeline.py
synapse_core/: __init__.py  ai.py  chunker.py  cli.py  extractors.py  logger.py  pipeline.py  sqlite_ingester.py
tests/: test_chunker.py  test_cli.py  test_extractors.py  test_pipeline.py  test_sqlite_ingester.py
