[project]
name = "synapse-core"
version = "0.4.0"
description = "Local RAG library — ingest files and SQLite, query semantically, pipe results into any AI agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "adm-crow"}]
license = "Apache-2.0"
keywords = ["rag", "ai", "llm", "vector", "chromadb", "embeddings", "local-ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "python-docx",
]

[project.optional-dependencies]
sentence = ["nltk"]

[project.urls]
Homepage = "https://pypi.org/project/synapse-core/"
Repository = "https://github.com/adm-crow/synapse"
Issues = "https://github.com/adm-crow/synapse/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "nltk",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["synapse_core"]
